# SCIoT_python_client

./: .gitignore  ANALYSIS_INDEX.md  ANALYSIS_README.md  CASCADING_SUMMARY.txt  CLIENT_SERVER_-1_SEMANTICS.md  DELAY_SIMULATION.md  IMPLEMENTATION_SUMMARY.md  LOCAL_INFERENCE_CLIENT_HANDLING.md  LOCAL_INFERENCE_IMPLEMENTATION.md  LOCAL_INFERENCE_MODE.md  MULTI_CLIENT_ARCHITECTURE.md  QUICKSTART.sh  README.md  SIMULATION_ANALYSIS_GUIDE.md  SIMULATION_RUNNER_README.md  STATISTICS_IMPLEMENTATION.md  STATISTICS_README.md  TEST_SUITE_SUMMARY.md  TOOLS_SUMMARY.md  VARIANCE_CASCADING_ENHANCEMENT.md  VARIANCE_DETECTION.md  VARIANCE_DETECTION_IMPLEMENTATION.md  VARIANCE_DETECTION_QUICK_REF.md  analyze_simulation.py  client.py  docker-compose.yml  example_analysis.py  generate_analysis.py  pyproject.toml  simulation_runner.py  test_variance_cascading.py  test_variance_detection.py  variance_analysis.py
.github/workflows/: tests.yml
logs/: DEBUG.log.2025-06-26  INFO.log.2025-06-26
server_client_light/client/: CONFIG_README.md  delay_simulator.py  generate_96.py  http_client.py  http_config.yaml  test_tflite.py  websocket_client.py  websocket_config.yaml
server_client_light/server/: websocket_server.py
simulated_results/: layer_size.csv  server_slowdowns.csv  simulated_results_server_speedup.csv  simulated_results_variable_speedup.csv  simulated_scenario.py
simulated_results/simulation_20251231_155838/: baseline_scenario_config.json  computation_delay_2ms_scenario_config.json  computation_delay_5ms_scenario_config.json  mobile_realistic_scenario_config.json  multi_client_baseline_scenario_config.json  multi_client_network_scenario_config.json  (+3 more)
src/client/: README.md
tests/: commons.py  test_client_resilience.py  test_multi_client.py  test_variance_and_local_inference.py
(+49 files in other folders)
